docs/compile_issue1_log_20220728a.txt
Compiling sketch...
"C:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\tools\\arm-none-eabi-gcc\\6-2017-q2-update/bin/arm-none-eabi-g++" -mcpu=cortex-m0 -mthumb "@C:\\Users\\Pranau\\AppData\\Local\\Temp\\arduino_build_771492/sketch/build_opt.h" -c -g -Os -w -std=gnu++14 -ffunction-sections -fdata-sections -nostdlib -fno-threadsafe-statics --param max-inline-insns-single=500 -fno-rtti -fno-exceptions -MMD "-IC:\\Users\\Pranau\\Desktop\\catena5120_simple" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\cores\\arduino/avr" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\cores\\arduino/stm32" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\cores\\arduino/stm32/USB" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\system/Drivers/STM32L0xx_HAL_Driver/Inc/" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\system/Drivers/STM32L0xx_HAL_Driver/Src/" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\system/STM32L0xx/" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\system/Middlewares/ST/STM32_USB_Device_Library/Core/Inc" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\system/Middlewares/ST/STM32_USB_Device_Library/Core/Src" -DSTM32L0xx -DARDUINO=10819 -DARDUINO_MCCI_CATENA_5120 -DARDUINO_ARCH_STM32 -DARDUINO_STM32 -DARDUINO_STM32L0xx -DARDUINO_STM32L082xx -DARDUINO_CATENA_5120 -DSTM32L082xx -DCATENA_CFG_SYSCLK=32 -DUSBCON -DUSBD_VID=0x040E -DUSBD_PID=0x00E1 "-DUSB_MANUFACTURER=\"MCCI Corporation\"" "-DUSB_PRODUCT=\"MCCI Catena 5120\"" -DARDUINO_BSP_CONFIG_SERIAL_MASK=0x1 -D__CORTEX_SC=0 -DMCCI_CATENA_5120 -DCFG_in866=1 -DCFG_sx1276_radio=1 -DARDUINO_LMIC_PROJECT_CONFIG_H=lmic_config_preconditions.h -DARDUINO_LMIC_CFG_NETWORK_TTN=1 -DARDUINO_LMIC_CFG_SUBBAND=-1 -DMCCI_CATENA_512x_PA0_SWITCHES_VDD=1 "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\arduino\\tools\\CMSIS\\4.5.0/CMSIS/Include/" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\system/Drivers/CMSIS/Device/ST/STM32L0xx/Include/" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\system/Drivers/CMSIS/Device/ST/STM32L0xx/Source/Templates/gcc/" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\cores\\arduino" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\variants\\CATENA_512x" "-IC:\\Users\\Pranau\\Documents\\Arduino\\libraries\\Catena-Arduino-Platform\\src" "-IC:\\Users\\Pranau\\Documents\\Arduino\\libraries\\Catena-mcciadk\\src" "-IC:\\Users\\Pranau\\Documents\\Arduino\\libraries\\arduino-lorawan\\src" "-IC:\\Users\\Pranau\\Documents\\Arduino\\libraries\\arduino-lmic\\src" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\libraries\\Wire\\src" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\libraries\\SPI\\src" "-IC:\\Users\\Pranau\\Documents\\Arduino\\libraries\\MCCI-Catena-SHT3x\\src" "-IC:\\Users\\Pranau\\Documents\\Arduino\\libraries\\MCCI_Catena_LTR329" "-IC:\\Users\\Pranau\\Documents\\Arduino\\libraries\\MCCI_FRAM_I2C" "C:\\Users\\Pranau\\AppData\\Local\\Temp\\arduino_build_771492\\sketch\\catena5120_simple.ino.cpp" -o "C:\\Users\\Pranau\\AppData\\Local\\Temp\\arduino_build_771492\\sketch\\catena5120_simple.ino.cpp.o"
In file included from C:\Users\Pranau\Documents\Arduino\libraries\Catena-Arduino-Platform\src/Catena5120.h:22:0,
                 from C:\Users\Pranau\Documents\Arduino\libraries\Catena-Arduino-Platform\src/Catena.h:68,
                 from C:\Users\Pranau\Desktop\catena5120_simple\catena5120_simple.ino:22:
C:\Users\Pranau\Documents\Arduino\libraries\Catena-Arduino-Platform\src/Catena512x.h:49:27: error: 'A11' was not declared in this scope
         APIN_VBAT_SENSE = A11,
                           ^~~
C:\Users\Pranau\Documents\Arduino\libraries\Catena-Arduino-Platform\src/Catena512x.h:50:27: error: 'A12' was not declared in this scope
         APIN_VBUS_SENSE = A12,
                           ^~~
Using library Catena-Arduino-Platform at version 0.21.2 in folder: C:\Users\Pranau\Documents\Arduino\libraries\Catena-Arduino-Platform 
Using library Catena-mcciadk at version 0.2.2 in folder: C:\Users\Pranau\Documents\Arduino\libraries\Catena-mcciadk 
Using library arduino-lorawan at version 0.9.1 in folder: C:\Users\Pranau\Documents\Arduino\libraries\arduino-lorawan 
Using library arduino-lmic at version 4.1.1 in folder: C:\Users\Pranau\Documents\Arduino\libraries\arduino-lmic 
Using library Wire at version 1.0 in folder: C:\Users\Pranau\AppData\Local\Arduino15\packages\mcci\hardware\stm32\3.0.5\libraries\Wire 
Using library SPI at version 1.0 in folder: C:\Users\Pranau\AppData\Local\Arduino15\packages\mcci\hardware\stm32\3.0.5\libraries\SPI 
Using library MCCI-Catena-SHT3x at version 0.2.1 in folder: C:\Users\Pranau\Documents\Arduino\libraries\MCCI-Catena-SHT3x 
Using library MCCI_Catena_LTR329 in folder: C:\Users\Pranau\Documents\Arduino\libraries\MCCI_Catena_LTR329 (legacy)
Using library MCCI_FRAM_I2C at version 2.0.0 in folder: C:\Users\Pranau\Documents\Arduino\libraries\MCCI_FRAM_I2C 
exit status 1
Error compiling for board MCCI Catena 5120.